[gd_scene load_steps=2 format=2]

[ext_resource path="res://guis/slot_interface.gd" type="Script" id=1]

[node name="Slot" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 550.0
margin_right = -954.0
margin_bottom = 4.0
rect_min_size = Vector2( 54, 54 )
custom_constants/margin_right = 10
custom_constants/margin_top = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )

[node name="Equipped" type="Label" parent="Panel"]
visible = false
margin_left = -3.0
margin_top = 2.0
margin_right = 47.5
margin_bottom = 21.5
text = "  quipped"

[node name="Equipment" type="RichTextLabel" parent="Panel"]
visible = false
margin_left = -3.0
margin_top = 2.0
margin_right = 37.0
margin_bottom = 42.0
bbcode_text = "E"
tab_size = 14
text = "E"

[node name="TextureRect" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
rect_min_size = Vector2( 35, 35 )

[connection signal="gui_input" from="Panel/TextureRect" to="." method="_on_Item_gui_input"]
[connection signal="mouse_entered" from="Panel/TextureRect" to="." method="_on_Item_mouse_entered"]
[connection signal="pressed" from="Panel/TextureRect" to="." method="_on_item_click"]
[connection signal="pressed" from="Panel/TextureRect" to="." method="_on_Item_pressed"]
